<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".CusineChoice">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/favCus"
        android:textColor="#163d3a"
        android:textSize="28sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_marginBottom="330dp"

        android:background="#7accc9"
        android:onClick="frBtnChoice1"
        android:text="@string/fra"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />




    <Button
        android:id="@+id/it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LogIn"
        android:layout_alignLeft="@+id/LogIn"
        android:layout_alignEnd="@+id/LogIn"
        android:layout_alignRight="@+id/LogIn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:layout_marginBottom="270dp"
        android:background="#3c8782"
        android:onClick="itBtnChoice"
        android:text="@string/it"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/asia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/SignUp"
        android:layout_alignLeft="@+id/SignUp"
        android:layout_alignEnd="@+id/SignUp"
        android:layout_alignRight="@+id/SignUp"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="210dp"
        android:background="#7accc9"
        android:onClick="asiaBtnChoice"
        android:text="@string/asia"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />



    <Button
        android:id="@+id/amerik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:layout_marginBottom="150dp"
        android:background="#3c8782"
        android:onClick="amerikBtnChoice"
        android:text="@string/amerik"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/mex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_marginBottom="90dp"

        android:background="#7accc9"
        android:onClick="mexBtnChoice"
        android:text="@string/mex"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/ind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LogIn"
        android:layout_alignLeft="@+id/LogIn"
        android:layout_alignEnd="@+id/LogIn"
        android:layout_alignRight="@+id/LogIn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:layout_marginBottom="30dp"
        android:background="#3c8782"
        android:onClick="indBtnChoice"
        android:text="@string/ind"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>
