<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".register">

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regCfrmPassword"
        android:layout_alignRight="@+id/regCfrmPassword"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="87dp"
        android:background="#3c8782"
        android:onClick="submitBtnRegister"
        android:text="@string/sbmt"
        android:textColor="#d7f0ef"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/regUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regEmail"
        android:layout_alignStart="@+id/regEmail"
        android:layout_alignLeft="@+id/regEmail"
        android:layout_alignEnd="@+id/regEmail"
        android:layout_alignRight="@+id/regEmail"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regUserName"
        android:layout_alignStart="@+id/regUserName"
        android:layout_alignLeft="@+id/regUserName"
        android:layout_alignEnd="@+id/regUserName"
        android:layout_alignRight="@+id/regUserName"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regCfrmPassword"
        android:layout_width="331dp"
        android:layout_height="58dp"
        android:layout_below="@+id/regPassword"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="177dp"
        android:ems="10"
        android:hint="@string/cnfrmPass"
        android:inputType="textPassword" />

</RelativeLayout>
