<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".ita_cusine">

    <Button
        android:id="@+id/ita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="246dp"
        android:layout_marginBottom="17dp"
        android:background="#7accc9"

        android:onClick="gpsIta"
        android:text="@string/top1"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/reviewMex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"
        android:background="#3c8782"
        android:onClick="revIta"

        android:text="@string/review"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="352dp"
        android:layout_height="174dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="101dp"
        android:text="@string/itaDesc"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="344dp"
        android:layout_height="194dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        app:srcCompat="@drawable/pizza1" />


</RelativeLayout>
