<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".personalData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="89dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regEmail"
                android:layout_alignStart="@+id/regEmail"
                android:layout_alignLeft="@+id/regEmail"
                android:layout_alignEnd="@+id/regEmail"
                android:layout_alignRight="@+id/regEmail"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regUserName"
                android:layout_alignStart="@+id/regUserName"
                android:layout_alignLeft="@+id/regUserName"
                android:layout_alignEnd="@+id/regUserName"
                android:layout_alignRight="@+id/regUserName"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="text" />



            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="30dp"
                android:entries="@array/gender" />


            <Spinner
                android:id="@+id/lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="60dp"
                android:entries="@array/foodPractise" />


            <Button
                android:id="@+id/Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/regCfrmPassword"
                android:layout_alignRight="@+id/regCfrmPassword"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="30dp"
                android:background="#3c8782"
                android:onClick="submitBtnPersonal"
                android:text="@string/sbmt"
                android:textColor="#d7f0ef"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
